--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import { MY_SKILL } from "@/data/constants";
 changeLanguage("cs");
 
 const meta = {
-    title: t("about"),
+	title: t("about"),
 };
 ---
 
@@ -18,7 +18,7 @@ const meta = {
 			<h2 class="title mb-4 text-xl">{t("technologie")}</h2>
 			{
 				MY_SKILL.map((skill) => (
-					<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+					<div class="mr-2 mb-2 inline-block bg-textColor px-4 py-2 text-base font-semibold text-bgColor">
 						{skill.title}
 					</div>
 				))
